# Pyrite64---Project-Magnet

./: .gitignore  CMakeLists.txt  MagnetProject.pak  project.p64proj
assets/: PlayerOne.prefab
assets/players/: Player.prefab  Player.prefab.conf  PlayerOne.glb  PlayerOne.glb.conf
data/scenes/1/: scene.json
data/scenes/2/: scene.json
src/user/: Feur.cpp  GameManager.cpp  Player.cpp  Timer.cpp  Timer.h
